validated all the pages

--- a/about.html
+++ b/about.html
@@ -11,7 +11,8 @@
 	</head>
 
 	<body>
-
+		<h1 class="hidden">TRAA About Page</h1>
+		
 		<section id="siteContainer">
 			<h2 class="hidden">TRAA</h2>
 
@@ -40,18 +41,19 @@
 				<h2>About the TRAA</h2>
 			</section>
 
-			<div id="contentBreak"></div>
+			<div class="contentBreak"></div>
 
 			<section id="intro">
 				<h2>The TRAA Works at a Grassroots Level Within the Thames River Watershed to:</h2>
 				<p>Protect, enhance and regenerate a viable, multi-species, year-round fishery.promote and participate in environmental clean-up, pollution control and rehabilitation. Breed, relocate and stock to re-establish or augment appropriate species of fish. Promote environmentally sound sport fishing practices. Form partnerships with community businesses, government agencies, special interest groups, landowners, and other stakeholders in the Thames River watershed. Increase public awareness of the unique diversity of the Thames River Watershed, its challenges, its recreational opportunities and its vital importance to our community.</p>
 			</section>
 
-			<div id="contentBreak"></div>
+			<div class="contentBreak"></div>
 
 			<section>
 				<h2>More About the TRAA</h2>
 				<section id="about1">
+					<h2 class="hidden">About Story 1</h2>
 					<div id="aboutImg1">
 						<img src="images/river_fishing.jpg" alt="Man holding fish">
 					</div>
@@ -61,6 +63,7 @@
 				</section>
 
 				<section id="about2">
+					<h2 class="hidden">About Story 2</h2>
 					<div id="aboutDesc2">
 						<p>The TRAA is a volunteer organization, governed by a formal constitution and by-laws. An elected Executive, with the guidence of the General Membership, sets the policies and direction for the TRAA. The TRAA has a history of always having a core group of active members supported by those who just want to be part of the solution. Either way, every member of the TRAA is active in their advocacy for the health of the Thames River watershed and its inhbitants.</p>
 					</div>
@@ -70,28 +73,28 @@
 				</section>
 			</section>
 
-			<div id="contentBreak"></div>
+			<div class="contentBreak"></div>
 
 			<section>
 				<h2>Local Businesses Step Up to Help Out the TRAA</h2>
 
 				<div id="businesses1">
-					<div id="contentBox">
+					<div class="contentBox">
 						<img src="images/melchers.png" alt="Melchers Construction Logo">
 						<p>Over the past couple of years the folks at Melchers Construction Ltd have offered up their beautiful boardroom for TRAA executive meetings. It's an ideal space with all the amenities required for us to accomplish all the "behind the scenes" work of the TRAA. Many thanks go out to the continued support of Melchers Construction Ltd.</p>
 					</div>
-					<div id="contentBox">
+					<div class="contentBox">
 						<img src="images/guillevin.png" alt="Guillevin International Logo">
 						<p>Members of the trout hatchery rotation know the woes we've had with lighting in the hatchery. Even with larger fixtures installed a few years ago, it was still frustrating on days when the mercury dipped below -15C and the fluorescent technology just teased us with its dull flicker. Enter Mike Jeffries of Guillevin Greentech in London with nice set of bright and dependable (and new!) LED fixtures. Once they were installed it was like working in well-appointed laboratory.</p>
 					</div>
-					<div id="contentBox">
+					<div class="contentBox">
 						<img src="images/muma.png" alt="Muma Manufacturing Logo">
 						<p>The TRAA voted unanimously to re-name the TRAA trout hatchery honouring Keith Wales' memory and his unselfish support of the TRAA's work in the London area, in particular Komoka Creek. Special thanks go out to Muma Manufacturing in St. Thomas for donating the beautiful laser-cut aluminum sign.</p>
 					</div>
 				</div>
 
 				<div id="businesses2">
-					<div id="contentBox">
+					<div class="contentBox">
 						<img src="images/try_recycling.png" alt="Try Recycling Inc. Logo" >
 						<p>After cleaning up the area around the TRAA shed and trout hatchery, our trailer was quite full and needed to be emptied. A big 'thank you' goes out to Rick Vandersluis and Mike Seabrook of Try Recycling who allowed the TRAA to empty the trailer at their facility free of charge.</p>
 					</div>
@@ -103,30 +106,37 @@
 				</div>
 			</section>
 
-			<div id="contentBreak"></div>
+			<div class="contentBreak"></div>
 
 			<section>
 				<h2>TRAA Positions</h2>
 				<div id="positions">
 					<div id="executives">
 						<h3>TRAA Executives</h3>
-						<p>President</p>
-						<h4>Rob Huber</h4>
-						<p>Vice President</p>
-						<h4>Paul Holmes</h4>
-						<p>Secretary</p>
-						<h4>Jeremy Beaton</h4>
-						<p>Treasurer</p>
-						<h4>Randy Bailey</h4>
-						<p>Chairperson</p>
-						<h4>Adam Bengen</h4>
+						<div id="executivesSplit">
+							<div>
+								<p>President</p>
+								<h4>Rob Huber</h4>
+								<p>Vice President</p>
+								<h4>Paul Holmes</h4>
+							</div>
+
+							<div>
+								<p>Secretary</p>
+								<h4>Jeremy Beaton</h4>
+								<p>Treasurer</p>
+								<h4>Randy Bailey</h4>
+								<p>Chairperson</p>
+								<h4>Adam Bengen</h4>
+							</div>
+						</div>
 					</div>
 
 					<div id="volunteers">
 						<h3>TRAA Volunteer Chairs</h3>
 						<div id="volunteerSplit">
 							<div>
-							<p>Trout</p>
+								<p>Trout</p>
 								<h4>Dan Schinkelshoek</h4>
 								<p>Warmwater</p>
 								<h4>Pud Hunter</h4>
@@ -170,7 +180,7 @@
 			</div>
 
 			<div id="fishAnimation">
-				<img alt="fish gif" src="images/fish.gif"></img>
+				<img alt="fish gif" src="images/fish.gif">
 			</div>
 
 			<div id="bottomBar">
