--- a/newsletters.html
+++ b/newsletters.html
@@ -38,7 +38,7 @@
 				<h2>TRAA Newsletters</h2>
 			</section>
 
-			<div id="contentBreak"></div>
+			<div class="contentBreak"></div>
 
 			<section id="intro">
 				<h2 class="hidden">intro to TRAA Newsletters</h2>
@@ -51,10 +51,10 @@
 				</div>
 			</section>
 
-			<div id="contentBreak"></div>
+			<div class="contentBreak"></div>
 
 			<section id="archive">
-				<h2>Take a stroll down memory lane by browsing through the TRAA Newsletter archive...<h2>
+				<h2>Take a stroll down memory lane by browsing through the TRAA Newsletter archive...</h2>
 				<div id="newsletters">
 
 					<div id="boxLeft">
@@ -109,7 +109,7 @@
 			</div>
 
 			<div id="fishAnimation">
-				<img alt="fish gif" src="images/fish.gif"></img>
+				<img alt="fish gif" src="images/fish.gif">
 			</div>
 
 			<div id="bottomBar">
