--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
 	</head>
 
 	<body>
-
+		<h1 class="hidden">TRAA Projects Page</h1>
 		<section id="siteContainer"> <h2 class="hidden">Header</h2>
 
 			<header id="mainHeader">
@@ -38,14 +38,14 @@
 				<h2>TRAA Projects</h2>
 			</section>
 
-			<div id="contentBreak"></div>
+			<div class="contentBreak"></div>
 
 			<section id="projectsIntro">
 				<h2>"Hands-on Environmentalism" is what we do...</h2>
 				<p>This is what sets the TRAA apart from other clubs and organizations. You'll find us right in the water clearing obstructions from streams, measuring returning salmonids & taking scale samples for DNA analysis, education through trout hatchery tours & stream walks, being a voice for the Thames River watershed & its inhabitants and the list goes on.</p>
 			</section>
 
-			<div id="contentBreak"></div>
+			<div class="contentBreak"></div>
 
 			<section>
 				<h2>Here's Some Current and Past TRAA Projects</h2>
@@ -72,7 +72,7 @@
 				</section>
 			</section>
 
-			<div id="contentBreak"></div>
+			<div class="contentBreak"></div>
 
 			<section id="archiveProj">
 				<h2>Project Archieves</h2>
@@ -100,7 +100,7 @@
 			</div>
 
 			<div id="fishAnimation">
-				<img alt="fish gif" src="images/fish.gif"></img>
+				<img alt="fish gif" src="images/fish.gif">
 			</div>
 
 			<div id="bottomBar">
