--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,7 @@
 
 	<body>
 		<h1 class="hidden">Contact Page</h1>
+		
 		<section id="siteContainer"> <h2 class="hidden">Header</h2>
 			<header id="mainHeader">
 				<div id="logo">
@@ -37,7 +38,7 @@
 				<h2>Contact Us</h2>
 			</section>
 
-			<div id="contentBreak"></div>
+			<div class="contentBreak"></div>
 
 			<section id="contactUs">
 				<h2 class="hidden">How to contact the TRAA</h2>
@@ -51,30 +52,30 @@
 						</p>
 						<p id="hearTRAA">the TRAA would like to hear from you.</p>
 				</div>
-				<div id="contentBreak">
+				<div class="contentBreak">
 				</div>
 			</section>
 
 			<section id="contactArea"> <h2 class="hidden">Contact Form and Map</h2>
 				<form id="form">
 					<input id="fName" type="text" name="firstName" placeholder="First Name">
-				</input>
+
 					<input id="lName" type="text" name="lastName" placeholder="Last Name">
-					</input>
+
 					<input id="address" type="text" name="address" placeholder="Address">
-					</input>
+
 					<input id="address2" type="text" name="address2" placeholder="Address 2">
-					</input>
+
 					<input id="city" type="text" name="city" placeholder="City">
-					</input>
+
 					<input id="province" type="text" name="province" placeholder="Province">
-					</input>
+
 					<input id="postalcode" type="text" name="postalcode" placeholder="Postal Code">
-					</input>
+
 					<input id="country" type="text" name="country" placeholder="Country">
-					</input>
+
 					<input id="submit" type="submit" name="submit">
-				</input>
+
 				</form>
 				<div id="mapContainer">
 					<div id="mapText">
@@ -85,7 +86,7 @@
 							N6G 0B9</p>
 					</div>
 					<div id="map">
-						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5841.103336985548!2d-81.22376716883079!3d42.9455776267746!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882ef3b01c9e9983%3A0x84558efdb9f3a3a1!2s790+Southdale+Rd+E%2C+London%2C+ON+N6E+1A8!5e0!3m2!1sen!2sca!4v1549347338898" width="550" height="300" frameborder="0" style="border:0;" allowfullscreen></iframe>
+						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5841.103336985548!2d-81.22376716883079!3d42.9455776267746!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882ef3b01c9e9983%3A0x84558efdb9f3a3a1!2s790+Southdale+Rd+E%2C+London%2C+ON+N6E+1A8!5e0!3m2!1sen!2sca!4v1549347338898" width="550" height="300"  style="border:0;" allowfullscreen></iframe>
 					</div>
 				</div>
 			</section>
@@ -94,7 +95,7 @@
 				<p>Please note the adrress listed is only for mail. The location on the map is our general meeting location.</p>
 			</div>
 
-			<div id="contentBreak"></div>
+			<div class="contentBreak"></div>
 
 			<section id="meeting">
 				<h2 class="hidden">Genreal Meeting</h2>
@@ -118,7 +119,7 @@
 						 meetings" so we won't be at WOFGPA clubhouse. Stay on
 						 top of these changes by visiting this Web site often.
 				</div>
-				<div id="contentBreak">
+				<div class="contentBreak">
 				</div>
 			</section>
 
@@ -143,7 +144,7 @@
 			</div>
 
 			<div id="fishAnimation">
-				<img alt="fish gif" src="images/fish.gif"></img>
+				<img alt="fish gif" src="images/fish.gif">
 			</div>
 			<div id="bottomBar">
 			</div>
