--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 
 	<body>
 		<h1 class="hidden">Contact Page</h1>
-		
+
 		<section id="siteContainer"> <h2 class="hidden">Header</h2>
 			<header id="mainHeader">
 				<div id="logo">
@@ -118,6 +118,9 @@
 						 For example, the July and August meetings are "fishing
 						 meetings" so we won't be at WOFGPA clubhouse. Stay on
 						 top of these changes by visiting this Web site often.
+				</div>
+				<div id="facebook">
+					<a href="https://www.facebook.com/groups/4TRAA/about/" ><img alt="facebook" src="images/facebook.svg"></a>
 				</div>
 				<div class="contentBreak">
 				</div>
